added example of using pattern curcuit breaker implementation of resilience4j
