# openapi/openapi.yaml
@@ -47,6 +47,50 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /v1/curcuit-breaker:
+    get:
+      tags:
+        - curcuit-breaker
+      summary: Test curcuit-breaker implementation
+      description: Test curcuit-breaker implementation
+      operationId: getTestCurcuitBreaker
+      parameters:
+        - name: num
+          in:  query
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: string
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: Template not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '422':
+          description: Validation exception
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
 components:
   schemas:
     Error:
